all bugs fixed into (Api, Card, PopupWithForm, PopupWithConfirm, Section, UserInfo.js, index.js, constants.js; body.css, element.css)

--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "webpack-dev-server": "^4.9.2"
   },
   "dependencies": {
-    "core-js": "^3.23.1",
-    "jquery": "^3.6.0"
+    "core-js": "^3.23.1"
   }
 }
